# Webots-YOLOv8

./: .gitignore  README.md
src/my_package/worlds/: .training_simulation.wbproj  training_simulation.wbt
src/object_finder/: package.xml  setup.py
src/object_finder/launch/: vision.launch.py
src/object_finder/object_finder/: connecting_and_showing.py  running_inference.py
